2007-11-14 Chris McGrath <chris@octopod.info>

	* Manifest.txt,
		TODO,
	  lib/rucola/initializer.rb,
	  lib/rucola/tasks/databases.rake,
	  rucola_generators/activerecord_model/USAGE,
	  rucola_generators/activerecord_model/activerecord_model_generator.rb,
	  rucola_generators/activerecord_model/templates/database.yml.erb,
	  rucola_generators/activerecord_model/templates/model_create_migration.rb.erb,
	  rucola_generators/activerecord_model/templates/model_proxy_template.rb.erb,
	  rucola_generators/activerecord_model/templates/model_template.rb.erb,
	  test/test_activerecord_model_generator.rb:

	- Remove AR stuff as it's moving to a plugin

2007-11-14 Chris McGrath <chris@octopod.info>

	* Manifest.txt,
	  TODO:

	- Remove .rake_tasks from Manifest.txt
	- Remove some completed TODOs

2007-11-13 Eloy Duran <e.duran@superalloy.nl>

	* lib/rucola/initializer.rb:

	Required the RCApp module, like Chris mentioned in r101.

2007-11-12 Justin Palmer <justin@activereload.net>

	* TODO,
	  lib/rucola/rucola_support/notifications/notifications.rb,
	  test/test_notifications.rb:

	Add helper for firing notifications.  Move notification name resolution to 
	a separate method, and don't raise NameErrors when the constant doesn't exist.
	
2007-11-12 Chris McGrath <chris@octopod.info>

	* Manifest.txt,
	  TODO,
	  lib/rucola/initializer.rb,
	  lib/rucola/rucola_support/rc_app.rb,
	  lib/rucola/tasks/databases.rake,
	  lib/rucola/tasks/main.rake:

	- Add support for migrations and other AR tasks
	- main.rake now just sets environment variables and requires the initializer
	  to set the RUBYCOCOA_ENV and RUBYCOCOA_ROOT constants
	- fix how RCApp.app_name finds Info.plist
	- Make the initializer get the app name using RCApp.app_name
	  NB: This means requiring rucola/rucola_support/rc_app.rb from the
	      initializer
	- Add TODO to move the AR stuff to a plugin

2007-11-12 Eloy Duran <e.duran@superalloy.nl>

	For the love of Beer Driven Development, the big r100!
